--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,11 @@ plugins {
 }
 
 group = 'com.gyucheol'
-version = '0.1.1'
+version = '0.1.2'
 
 java {
-    sourceCompatibility = 17
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility JavaVersion.VERSION_17
 }
 
 publishing {
@@ -17,6 +18,8 @@ publishing {
         maven(MavenPublication) {
             groupId = 'com.gyucheol.jpadatabasecleaner'
             artifactId = 'jpa-database-cleaner'
+            version = '0.1.2'
+
             from components.java
         }
     }
