--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.gyucheol'
-version = '0.1.3'
+version = '0.1.4'
 
 java {
     sourceCompatibility = JavaVersion.VERSION_17
@@ -15,12 +15,21 @@ java {
 
 publishing {
     publications {
+        mavenJava(MavenPublication) {
+            versionMapping {
+                usage('java-api') {
+                    fromResolutionOf('runtimeClasspath')
+                }
+                usage('java-runtime') {
+                    fromResolutionResult()
+                }
+            }
+        }
+
         maven(MavenPublication) {
             groupId = 'com.gyucheol.jpadatabasecleaner'
             artifactId = 'jpa-database-cleaner'
-            version = '0.1.3'
-
-            from components.java
+            version = '0.1.4'
         }
     }
 }
